--- a/app/src/main/res/layout/k_weather.xml
+++ b/app/src/main/res/layout/k_weather.xml
@@ -40,27 +40,27 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/kYesterdayWeather"/>
+            app:layout_constraintRight_toLeftOf="@id/kMaxCelcius"/>
 
         <TextView
-            android:id="@+id/kYesterdayWeather"
+            android:id="@+id/kMaxCelcius"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="어제보다 7도 높아요."
             android:textSize="12sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@id/kCelsius"
-            app:layout_constraintBottom_toTopOf="@id/kDirt"
+            app:layout_constraintBottom_toTopOf="@id/kMinCelcius"
             app:layout_constraintRight_toLeftOf="@id/kLocationIcon"
             android:textAlignment="textStart"
             android:paddingStart="10dp"/>
 
         <TextView
-            android:id="@+id/kDirt"
+            android:id="@+id/kMinCelcius"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/kYesterdayWeather"
+            app:layout_constraintTop_toBottomOf="@id/kMaxCelcius"
             app:layout_constraintLeft_toRightOf="@id/kCelsius"
             app:layout_constraintRight_toLeftOf="@id/kLocationIcon"
             android:textAlignment="textStart"
@@ -73,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/baseline_my_location_black_36"
-            app:layout_constraintLeft_toRightOf="@id/kDirt"
+            app:layout_constraintLeft_toRightOf="@id/kMinCelcius"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
